# prototype-TacOS

./: CMakeLists.txt  README.md  analysis-of-requirements.txt  design.txt  requirements.txt  tdd-plan.txt  todo.txt
code/: App.hxx  AppStore.hxx  BrowserApp.hxx  CMakeLists.txt  IdeApp.hxx  MusicApp.hxx  main.cxx
test/: AppTest.cxx  CMakeLists.txt
