include_directories(${TACOS_SOURCE_DIR}/code)
link_directories(${TACOS_SOURCE_DIR}/code)

ENABLE_TESTING()


ADD_DEFINITIONS(-g -Wall -DBOOST_TEST_DYN_LINK)
FIND_PACKAGE(Boost 1.37.0 REQUIRED COMPONENTS unit_test_framework)
IF(Boost_FOUND)
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
    LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
ENDIF(Boost_FOUND)
   
set(LINKLIBS ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} tacos)

ADD_EXECUTABLE(AppTest AppTest.cxx)
IF(UNIX)
    TARGET_LINK_LIBRARIES(AppTest ${LINKLIBS})
ENDIF(UNIX)
ADD_TEST(AppTest AppTest)


